--- a/index.html
+++ b/index.html
@@ -1,9 +1,348 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hot Gadgets</title>
-  </head>
-  <body></body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hot Gadgets</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
+    integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+
+<body>
+
+  <!-- header -->
+  <header class="container-fluid position-relative">
+    <div class="background-enhancer">
+      <img src="image/background.png" class="img-fluid" alt="">
+    </div>
+    <div class="container px-md-3 px-lg-5">
+      <!-- navbar -->
+      <nav class="navbar navbar-expand-lg navbar-light pt-1">
+        <div class="container-fluid">
+          <a href="#" class="navbar-brand"><img src="image/logo.png" alt="" width="237" height="96" /></a>
+          <button class="navbar-toggler p-0 border-0" type="button" data-toggle="collapse"
+            data-target="#navbarSupportedContent">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto d-flex justify-content-between">
+              <li class="nav-item">
+                <a href="" class="nav-link active">Home</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Product</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">About us</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Conatct us</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- navbar -->
+
+      <!-- slider -->
+      <div id="carouselExampleIndicators" class="carousel shadow pb-2" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item slide-1 active">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-12 col-md-6 order-1 order-md-0 d-flex justify-content-center align-items-center">
+                  <div class="text-center text-md-left">
+                    <h1>Macbook Pro</h1>
+                    <p class="text-black-50">
+                      Lorem ipsum dolor sit amet, consectetur adipisicing
+                      elit. Velit voluptatibus saepe unde placeat
+                      exercitationem cumque?
+                    </p>
+                    <button class="btn">
+                      <span>Buy Now</span>
+                      <span class="animate">&rightarrow;</span>
+                    </button>
+                  </div>
+                </div>
+                <div class="p-0 col-md-6 order-0 order-md-1">
+                  <img src="image/banner-products/slider-1.png" class="img-fluid" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item slide-2">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-12 col-md-6 order-1 order-md-0 d-flex justify-content-center align-items-center">
+                  <div class="text-center text-md-left">
+                    <h1>Macbook Pro</h1>
+                    <p class="text-black-50">
+                      Lorem ipsum dolor sit amet, consectetur adipisicing
+                      elit. Velit voluptatibus saepe unde placeat
+                      exercitationem cumque?
+                    </p>
+                    <button class="btn">
+                      <span>Buy Now</span>
+                      <span class="animate">&rightarrow;</span>
+                    </button>
+                  </div>
+                </div>
+                <div class="p-0 col-md-6 order-0 order-md-1">
+                  <img src="image/banner-products/slider-2.png" class="img-fluid" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item slide-3">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-12 col-md-6 order-1 order-md-0 d-flex justify-content-center align-items-center">
+                  <div class="text-center text-md-left">
+                    <h1>Macbook Pro</h1>
+                    <p class="text-black-50">
+                      Lorem ipsum dolor sit amet, consectetur adipisicing
+                      elit. Velit voluptatibus saepe unde placeat
+                      exercitationem cumque?
+                    </p>
+                    <button class="btn">
+                      <span>Buy Now</span>
+                      <span class="animate">&rightarrow;</span>
+                    </button>
+                  </div>
+                </div>
+                <div class="p-0 col-md-6 order-0 order-md-1">
+                  <img src="image/banner-products/slider-3.png" class="img-fluid" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <ol class="carousel-indicators mt-3 mt-md-0">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1" class=""></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2" class=""></li>
+        </ol>
+      </div>
+      <!-- slider -->
+    </div>
+  </header>
+  <!-- header -->
+  <div class="container px-md-3 px-lg-5">
+
+    <!-- main -->
+    <main>
+      <!-- smartphone -->
+      <div id="smartphone" class="container">
+        <div class="row py-5">
+          <h1 class="col-8">smartphone</h1>
+          <h4 class="col-4 text-right">
+            <a href="#" class="see-all">see all</a>
+          </h4>
+        </div>
+        <div class="row">
+          <div class="col-12 col-md-4 px-3">
+            <div class="card border-0 py-3 shadow rounded">
+              <div class="d-flex justify-content-center align-items-center rounded">
+                <img src="image/phone/phone-1.png" />
+              </div>
+              <div class="card-body text-center">
+                <h2>samsung</h2>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Quia, libero.
+                </p>
+                <div>
+                  <p><strong>$999</strong></p>
+                  <button class="btn">
+                    <span>Buy Now</span>
+                    <span class="animate">&rightarrow;</span>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 px-3">
+            <div class="card border-0 py-3 shadow rounded">
+              <div class="d-flex justify-content-center align-items-center rounded">
+                <img src="image/phone/phone-2.png" class="px-3 py-3" />
+              </div>
+              <div class="card-body text-center">
+                <h2>samsung</h2>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Quia, libero.
+                </p>
+                <div>
+                  <p><strong>$999</strong></p>
+                  <button class="btn">
+                    <span>Buy Now</span>
+                    <span class="animate">&rightarrow;</span>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 px-3">
+            <div class="card border-0 py-3 shadow rounded">
+              <div class="d-flex justify-content-center align-items-center rounded">
+                <img src="image/phone/phone-3.png" class="px-3 py-3" />
+              </div>
+              <div class="card-body text-center">
+                <h2>samsung</h2>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Quia, libero.
+                </p>
+                <div>
+                  <p><strong>$999</strong></p>
+                  <button class="btn">
+                    <span>Buy Now</span>
+                    <span class="animate">&rightarrow;</span>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- smartphone -->
+
+      <!-- laptop -->
+      <div id="laptop" class="container">
+        <div class="row py-5">
+          <h1 class="col-8">laptop</h1>
+          <h4 class="col-4 text-right">
+            <a href="#" class="see-all">see all</a>
+          </h4>
+        </div>
+        <div class="row">
+          <div class="col-12 col-md-4 px-3">
+            <div class="card border-0 py-3 shadow rounded">
+              <div class="d-flex justify-content-center align-items-center rounded">
+                <img src="image/laptop/product-1.png" class="p-1img-fluid" />
+              </div>
+              <div class="card-body text-center">
+                <h2>samsung</h2>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Quia, libero.
+                </p>
+                <div>
+                  <p><strong>$999</strong></p>
+                  <button class="btn">
+                    <span>Buy Now</span>
+                    <span class="animate">&rightarrow;</span>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 px-3">
+            <div class="card border-0 py-3 shadow rounded">
+              <div class="d-flex justify-content-center align-items-center rounded">
+                <img src="image/laptop/product-2.png" class="p-1img-fluid" />
+              </div>
+              <div class="card-body text-center">
+                <h2>samsung</h2>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Quia, libero.
+                </p>
+                <div>
+                  <p><strong>$999</strong></p>
+                  <button class="btn">
+                    <span>Buy Now</span>
+                    <span class="animate">&rightarrow;</span>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 px-3">
+            <div class="card border-0 py-3 shadow rounded">
+              <div class="d-flex justify-content-center align-items-center rounded">
+                <img src="image/laptop/product-3.png" class="p-1img-fluid" />
+              </div>
+              <div class="card-body text-center">
+                <h2>samsung</h2>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Quia, libero.
+                </p>
+                <div>
+                  <p><strong>$999</strong></p>
+                  <button class="btn">
+                    <span>Buy Now</span>
+                    <span class="animate">&rightarrow;</span>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- laptop -->
+
+      <!-- categories -->
+      <div id="categoties" class="container">
+        <h1 class="text-center">Categories</h1>
+        <hr class="p-1 rounded-pill m-auto" />
+        <div class="row p-0">
+          <!-- bag shoe perfume -->
+          <div class="col-md-6 d-flex flex-column flex-md-row justify-content-center align-items-center">
+            <!-- bag -->
+            <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
+              <div
+                class="box box-1 col-10 p-5 px-3 shadow-lg d-flex flex-column justify-content-center align-items-center mt-5 mt-md-0">
+                <img src="image/Categories/bag.png" alt="" />
+                <h4 class="text-center">bag</h4>
+              </div>
+            </div>
+            <!-- bag -->
+
+            <!-- shoe perfume -->
+            <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
+              <div
+                class="box box-2 col-10 p-5 px-3 shadow-lg d-flex flex-column justify-content-center align-items-center">
+                <img src="image/Categories/shoe.png" alt="" />
+                <h4 class="text-center">shoe</h4>
+              </div>
+              <div
+                class="box box-3 col-10 p-5 px-3 mt-md-5 shadow-lg d-flex flex-column justify-content-center align-items-center">
+                <img src="image/Categories/perfume.png" alt="" />
+                <h4 class="text-center">perfume</h4>
+              </div>
+            </div>
+            <!-- shoe perfume -->
+          </div>
+          <!-- bag shoe perfume -->
+
+          <!-- pale-order background image -->
+          <div class="d-none col-md-6 d-md-flex justify-content-end align-items-center">
+            <img src="image/Categories/pale-order.png" class="img-fluid" alt="" />
+          </div>
+          <!-- pale-order background image -->
+        </div>
+      </div>
+      <!-- categories -->
+    </main>
+    <!-- main -->
+  </div>
+
+  <!-- footer -->
+  <footer class="bg-dark text-center text-white p-2">
+    &copy;copyright by Tanvir
+  </footer>
+  <!-- footer -->
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
+    integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
