fixed the navbar for small devices

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 <body>
 
   <!-- header -->
-  <header class="container-fluid position-relative">
+  <header class="container-fluid position-relative p-0">
     <div class="background-enhancer">
       <img src="image/background.png" class="img-fluid" alt="">
     </div>
-    <div class="container px-md-3 px-lg-5">
+    <div class="  container-fluid px-md-3 px-lg-5">
       <!-- navbar -->
-      <nav class="navbar navbar-expand-lg navbar-light pt-1">
-        <div class="container-fluid">
-          <a href="#" class="navbar-brand"><img src="image/logo.png" alt="" width="237" height="96" /></a>
+      <nav class=" container-fluid navbar navbar-expand-lg navbar-light pt-1">
+        <div class="container-fluid p-0">
+          <a href="#" class="navbar-brand"><img src="image/logo.png" alt="" width="150" height="70" /></a>
           <button class="navbar-toggler p-0 border-0" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent">
             <span class="navbar-toggler-icon"></span>
