--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <!-- header -->
-  <header class="container-fluid position-relative p-0">
+  <header class="container-fluid position-relative">
     <div class="background-enhancer">
       <img src="image/background.png" class="img-fluid" alt="">
     </div>
