site beauty increased

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 <body>
 
   <!-- header -->
-  <header class="container-fluid position-relative">
+  <header class="container position-relative">
     <div class="background-enhancer">
       <img src="image/background.png" class="img-fluid" alt="">
     </div>
-    <div class="  container-fluid px-md-3 px-lg-5">
+    <div class="container-fluid px-md-3 px-lg-5">
       <!-- navbar -->
-      <nav class=" container-fluid navbar navbar-expand-lg navbar-light pt-1">
-        <div class="container-fluid p-0">
-          <a href="#" class="navbar-brand"><img src="image/logo.png" alt="" width="150" height="70" /></a>
-          <button class="navbar-toggler p-0 border-0" type="button" data-toggle="collapse"
+      <nav class="container-fluid navbar navbar-expand-lg navbar-light py-2 p-0">
+        <div class="container-fluid p-0 ">
+          <a href="#" class="navbar-brand mr-auto"><img src="image/logo.png" alt="" width="150" height="70" /></a>
+          <button class="navbar-toggler ml-auto p-0 border-0" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent">
             <span class="navbar-toggler-icon"></span>
           </button>
